--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
 		"build": "webpack"
 	},
 	"dependencies": {
-		"classnames": "^2.3.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"classnames": "2.3.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.17.3",
-		"@babel/core": "^7.17.5",
-		"@babel/preset-env": "^7.16.11",
-		"@babel/preset-react": "^7.16.7",
-		"babel-loader": "^8.2.3",
-		"html-webpack-plugin": "^5.5.0",
-		"webpack": "^5.69.1",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.7.4"
+		"@babel/cli": "7.17.3",
+		"@babel/core": "7.17.5",
+		"@babel/preset-env": "7.16.11",
+		"@babel/preset-react": "7.16.7",
+		"babel-loader": "8.2.3",
+		"css-loader": "6.7.1",
+		"html-webpack-plugin": "5.5.0",
+		"style-loader": "3.3.1",
+		"webpack": "5.69.1",
+		"webpack-cli": "4.9.2",
+		"webpack-dev-server": "4.7.4"
 	}
 }
