--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
 		"@babel/core": "7.17.5",
 		"@babel/preset-env": "7.16.11",
 		"@babel/preset-react": "7.16.7",
+		"autoprefixer": "10.4.4",
 		"babel-loader": "8.2.3",
 		"css-loader": "6.7.1",
 		"html-webpack-plugin": "5.5.0",
+		"postcss": "8.4.12",
+		"postcss-loader": "6.2.1",
+		"sass": "1.49.9",
+		"sass-loader": "12.6.0",
 		"style-loader": "3.3.1",
 		"webpack": "5.69.1",
 		"webpack-cli": "4.9.2",
