--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 	"dependencies": {
 		"classnames": "2.3.1",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "7.17.3",
