--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	],
 	"scripts": {
 		"dev": "webpack serve",
-		"build": "webpack"
+		"build": "webpack",
+		"lint": "eslint \"./src/**/*.{js,jsx,json}\""
 	},
 	"dependencies": {
 		"classnames": "2.3.1",
@@ -26,6 +27,8 @@
 		"autoprefixer": "10.4.4",
 		"babel-loader": "8.2.3",
 		"css-loader": "6.7.1",
+		"eslint": "8.13.0",
+		"eslint-plugin-react": "^7.29.4",
 		"html-webpack-plugin": "5.5.0",
 		"postcss": "8.4.12",
 		"postcss-loader": "6.2.1",
