--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "eslint \"./src/**/*.{js,jsx,json}\""
 	},
 	"dependencies": {
+		"@babel/runtime": "7.17.9",
 		"classnames": "2.3.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"@babel/cli": "7.17.3",
 		"@babel/core": "7.17.5",
+		"@babel/plugin-transform-runtime": "7.17.0",
 		"@babel/preset-env": "7.16.11",
 		"@babel/preset-react": "7.16.7",
 		"autoprefixer": "10.4.4",
