--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@babel/runtime": "7.17.9",
 		"classnames": "2.3.1",
+		"marked": "4.0.15",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-router-dom": "6.3.0"
