--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"marked": "4.0.15",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-query": "3.39.0",
 		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
