Добавляет TS, конфиги, начинает переезд на TS

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"lint": "eslint \"./src/**/*.{js,jsx,json}\""
 	},
 	"dependencies": {
-		"@babel/runtime": "7.17.9",
 		"classnames": "2.3.1",
 		"marked": "4.0.15",
 		"react": "17.0.2",
@@ -23,22 +22,28 @@
 		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "7.17.3",
-		"@babel/core": "7.17.5",
-		"@babel/plugin-transform-runtime": "7.17.0",
-		"@babel/preset-env": "7.16.11",
-		"@babel/preset-react": "7.16.7",
+		"@types/react": "18.0.9",
+		"@types/react-dom": "18.0.5",
+		"@typescript-eslint/eslint-plugin": "5.26.0",
+		"@typescript-eslint/parser": "5.26.0",
 		"autoprefixer": "10.4.4",
-		"babel-loader": "8.2.3",
 		"css-loader": "6.7.1",
 		"eslint": "8.13.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-jsx-a11y": "6.5.1",
+		"eslint-plugin-prettier": "4.0.0",
 		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "4.5.0",
 		"html-webpack-plugin": "5.5.0",
 		"postcss": "8.4.12",
 		"postcss-loader": "6.2.1",
+		"prettier": "2.6.2",
 		"sass": "1.49.9",
 		"sass-loader": "12.6.0",
 		"style-loader": "3.3.1",
+		"ts-loader": "9.3.0",
+		"typescript": "4.7.2",
 		"webpack": "5.69.1",
 		"webpack-cli": "4.9.2",
 		"webpack-dev-server": "4.7.4"
