--- a/package.json
+++ b/package.json
@@ -1,52 +1,61 @@
 {
-	"name": "06-blog",
-	"version": "1.0.0",
-	"private": true,
-	"main": "index.js",
-	"browserslist": [
-		"> 0.5%",
-		"last 2 versions",
-		"not dead"
-	],
-	"scripts": {
-		"dev": "webpack serve",
-		"build": "webpack",
-		"lint": "eslint \"./src/**/*.{js,jsx,json}\""
-	},
-	"dependencies": {
-		"classnames": "2.3.1",
-		"marked": "4.0.15",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-query": "3.39.0",
-		"react-router-dom": "6.3.0"
-	},
-	"devDependencies": {
-		"@types/marked": "4.0.3",
-		"@types/react": "18.0.9",
-		"@types/react-dom": "18.0.5",
-		"@typescript-eslint/eslint-plugin": "5.26.0",
-		"@typescript-eslint/parser": "5.26.0",
-		"autoprefixer": "10.4.4",
-		"css-loader": "6.7.1",
-		"eslint": "8.13.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-jsx-a11y": "6.5.1",
-		"eslint-plugin-prettier": "4.0.0",
-		"eslint-plugin-react": "^7.29.4",
-		"eslint-plugin-react-hooks": "4.5.0",
-		"html-webpack-plugin": "5.5.0",
-		"postcss": "8.4.12",
-		"postcss-loader": "6.2.1",
-		"prettier": "2.6.2",
-		"sass": "1.49.9",
-		"sass-loader": "12.6.0",
-		"style-loader": "3.3.1",
-		"ts-loader": "9.3.0",
-		"typescript": "4.7.2",
-		"webpack": "5.69.1",
-		"webpack-cli": "4.9.2",
-		"webpack-dev-server": "4.7.4"
-	}
+  "name": "06-blog",
+  "version": "1.0.0",
+  "private": true,
+  "main": "index.js",
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "webpack --node-env=production",
+    "analyze": "webpack --analyze --mode=production",
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+  },
+  "dependencies": {
+    "classnames": "2.3.1",
+    "marked": "4.0.15",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-query": "3.39.0",
+    "react-router-dom": "6.3.0"
+  },
+  "devDependencies": {
+    "@types/marked": "4.0.3",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "@typescript-eslint/parser": "5.26.0",
+    "autoprefixer": "10.4.4",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.7.1",
+    "css-minimizer-webpack-plugin": "4.0.0",
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "html-webpack-plugin": "5.5.0",
+    "imagemin-webpack-plugin": "2.4.2",
+    "mini-css-extract-plugin": "2.6.0",
+    "postcss": "8.4.12",
+    "postcss-loader": "6.2.1",
+    "prettier": "2.6.2",
+    "sass": "1.49.9",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
+    "terser-webpack-plugin": "5.3.3",
+    "ts-loader": "9.3.0",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
+    "typescript": "4.7.2",
+    "webpack": "5.69.1",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4"
+  }
 }
