--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
+  "homepage": "https://papatomatoe.github.io",
   "browserslist": [
     "> 0.5%",
     "last 2 versions",
@@ -13,10 +14,13 @@
     "build": "webpack --node-env=production",
     "analyze": "webpack --analyze --mode=production",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "classnames": "2.3.1",
+    "gh-pages": "4.0.0",
     "marked": "4.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
