--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,3 +45,4 @@ jobs:
         user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         repository: ${{ github.repository }}
+        API_URL: ${{ secrets.API_URL }}
