--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,9 @@ jobs:
   
     - name: Build
       run: npm run build
+      env:
+        API_URL: ${{ secrets.API_URL }}
+
     
     - name: Deploy
       run: |
@@ -45,4 +48,3 @@ jobs:
         user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         repository: ${{ github.repository }}
-        API_URL: ${{ secrets.API_URL }}
